add: 職務経歴書の表示確認程度

--- a/src/assets/css/index.scss
+++ b/src/assets/css/index.scss
@@ -9,8 +9,8 @@
 $min-contrast-ratio:   3;
 
 // color
-$primary: #000b1c;
-$primary-light: #586089;
+$primary: #50608c;
+$primary-light: #687099;
 $danger-dark: #9c1525;
 
 /* Bootstrap functions */
